tests/snapshots/multipart__spec_without_schema_type.snap
---
source: tests/multipart.rs
expression: spec
---
openapi: 3.1.0
info:
  title: BareWidgetApi
  version: 0.1.0
paths:
  /widgets:
    post:
      operationId: create_widget
      requestBody:
        content:
          multipart/form-data: {}
        required: true
      responses:
        "200":
          description: successful operation
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/Widget"
        default:
          description: error
          content:
            application/json:
              schema:
                $ref: "#/components/schemas/ApiError"
components:
  schemas:
    Widget:
      properties:
        name:
          type: string
        size:
          type: integer
          minimum: 0
          format: uint
      type: object
      required:
        - name
        - size
    ApiError:
      properties:
        message:
          type: string
      type: object
      required:
        - message
